<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/trans_white_10"
    android:layout_width="match_parent"
    android:layout_marginTop="16dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_program_logo"
        android:layout_width="@dimen/logo_dimension"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_list"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_program_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mock_station_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/iv_program_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_program_logo" />

    <TextView
        android:id="@+id/tv_on_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/desc_on_start"
        android:textColor="@color/statusColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_program_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_program_name" />

    <TextView
        android:id="@+id/tv_program_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/mock_station_desc_mock"
        android:textColor="@color/statusColor"
        app:layout_constraintEnd_toStartOf="@+id/iv_play"
        app:layout_constraintStart_toEndOf="@+id/tv_on_live"
        app:layout_constraintTop_toTopOf="@+id/tv_on_live" />

    <TextView
        android:id="@+id/tv_program_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/mock_station_category_mock"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/iv_program_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_program_desc" />

    <ImageView
        android:id="@+id/iv_play"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_paly_liste"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>