<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"

    android:background="@color/trans_white_20">

    <ImageView
        android:id="@+id/iv_event_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/image_list_box" />

    <TextView
        android:id="@+id/tv_event_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/mock_songs_event"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_event_image"
        app:layout_constraintTop_toTopOf="@+id/iv_event_image" />

    <TextView
        android:id="@+id/tv_event_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/mock_date"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_event_start_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_title" />

    <TextView
        android:id="@+id/tv_event_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/mock_date"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/iv_event_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_title" />

    <TextView
        android:id="@+id/tv_event_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/mock_dubai_24_khalifa_tower"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_event_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_end_date" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_event_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_location" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_event_image">

        <Button
            android:id="@+id/btn_event_share"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_holo_white"
            android:drawableStart="@drawable/ic_share_no_boarder"
            android:selectAllOnFocus="false"
            android:text="@string/title_share"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_event_calender"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:background="@drawable/bg_holo_white"
            android:drawableStart="@drawable/ic_calender"
            android:padding="5dp"
            android:text="@string/btn_mark_my_calender"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="10sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_event_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/mock_all_stations_will_introduce"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_event_image"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</android.support.constraint.ConstraintLayout>